# xPackageManager

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
cpp/: main.cpp
crates/xpm-alpm/src/: backend.rs  cache.rs  lib.rs  orphan.rs  transaction.rs
crates/xpm-core/src/: error.rs  lib.rs  operation.rs  package.rs  source.rs
crates/xpm-flatpak/src/: backend.rs  lib.rs  remote.rs
crates/xpm-service/src/: lib.rs  manager.rs  progress.rs  state.rs
crates/xpm-ui/: Cargo.toml
crates/xpm-ui/src/: main.rs
crates/xpm-ui/ui/: main.slint
packaging/: PKGBUILD
qml/: main.qml  test.qml
qml/components/: PackageCard.qml  PackageInfoPane.qml  ProgressDialog.qml  SearchBar.qml
qml/views/: FlatpakView.qml  InstalledView.qml  SettingsView.qml  UpdatesView.qml
resources/: resources.qrc  xpackagemanager.desktop.in
